k3s/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: myadmin-db-service
  namespace: myadmin-dev
  labels:
    app.kubernetes.io/name: myadmin-db
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: myadmin
spec:
  type: ClusterIP
  clusterIP: None # This ensures that the service is headless, allowing direct access to the StatefulSet pods.
  ports:
  - port: 3306
    name: mysql
  selector:
    app.kubernetes.io/name: myadmin-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: myadmin-db
  namespace: myadmin-dev
  labels:
    app.kubernetes.io/name: myadmin-db
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: myadmin
spec:
  serviceName: "myadmin-db-service"
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: myadmin-db
  template:
    metadata:
      labels:
        app.kubernetes.io/name: myadmin-db
        app.kubernetes.io/component: database
        app.kubernetes.io/part-of: myadmin
    spec:
      nodeSelector:
        # This ensures that the MySQL pod is scheduled on a specific node (myadmin-k3s-worker-1), which can be useful for performance or compliance reasons.
        kubernetes.io/hostname: "myadmin-k3s-worker-1"
      containers:
      - name: mysql
        image: mysql:8.0.46 # Using a specific MySQL version ensures compatibility and stability for the application.
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi # The size of the persistent volume claim is set to 2Gi, which should be sufficient for the initial database size and expected growth. Adjust as necessary based on application needs.
