k3s/myadmin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myadmin-api
  namespace: myadmin-dev
  labels:
    app.kubernetes.io/name: myadmin-api
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: myadmin
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: myadmin-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: myadmin-api
        app.kubernetes.io/component: backend
        app.kubernetes.io/part-of: myadmin
    spec:
      imagePullSecrets:
        - name: gar-credentials
      containers:
        - name: myadmin-core
          # yamllint disable-line rule:line-length
          image: us-west1-docker.pkg.dev/myadminproject-497120/myadmin-repo/myadmin-app:IMAGE_TAG
          ports:
            - containerPort: 8000
              name: http-api
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "200m"
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: myadmin-api-service
  namespace: myadmin-dev
  labels:
    app.kubernetes.io/name: myadmin-api
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: myadmin
spec:
  type: ClusterIP
  ports:
    # Exposition sur le port 80 pour une redirection propre depuis l'Ingress
    - port: 80
      # Correspond au nom du port défini dans le conteneur
      targetPort: http-api
      # Nom du port pour une référence claire dans l'Ingress
      name: http
  selector:
    app.kubernetes.io/name: myadmin-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myadmin-api-ingress
  namespace: myadmin-dev
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app.kubernetes.io/name: myadmin-api
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: myadmin
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myadmin-api-service
                port:
                  name: http
